design update and some minor changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
 .App_header {
-    background-color: #282c34;
+    background-image: linear-gradient(to left bottom, mediumblue,#999, #555, darkblue, #111, #000);
     min-height: 100vh;
     display: flex;
-    /*flex-direction: column;*/
-    align-items: center;
-    /*justify-content: center;*/
+    /*align-items: center;*/
     font-size: calc(10px + 2vmin);
     color: white;
 }
 
 .App_header a {
-    color: wheat
+    color: wheat;
+    display: flex;
+    justify-content: space-between;
 }
 
 .Nav_bar {
-    margin: 25px;
+    margin: 0 25px;
 }
 
 .Nav_bar a:hover {
@@ -23,14 +23,16 @@
 }
 
 .content {
-    margin: 0 auto;
+    margin: auto;
 }
 
 @media (max-width: 1000px) {
     .content {
+        /*margin: 0;*/
+        /*min-width: 25vmax;*/
+    }
+
+    .Nav_bar {
         margin: 0;
-        min-width: 25vmax;
-    }.Nav_bar {
-         margin: 0;
-     }
+    }
 }
