--- a/src/components/creators/Creator.module.css
+++ b/src/components/creators/Creator.module.css
@@ -93,8 +93,11 @@
 }
 
 .moving_boxes_link:hover a {
-    color: #18397f;
-    font-weight: bold;
+    /*color: #18397f;*/
+    /*font-weight: bold;*/
+    text-decoration: none;
+    color: #0000ff;
+    text-shadow: 0 1px 10px blue;
 }
 
 .moving_boxes_link:hover {
