--- a/src/components/timer/JustTimer.module.css
+++ b/src/components/timer/JustTimer.module.css
@@ -45,12 +45,19 @@ input {
     border: none;
     font-size: 1.5vmax;
     background: #f7fca0;
-    color: #878b32;
+    color: #222;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     padding: 15px 30px;
     cursor: pointer;
     transition: 0.3s ease all;
+}
+
+.buttonSum {
+    color: #333;
+}
+.buttonSum:hover {
+    color: #333;
 }
 
 .buttons button:hover, .buttonSum:hover {
