--- a/src/components/infinite_image_gallery/InfiniteImageGallery.module.css
+++ b/src/components/infinite_image_gallery/InfiniteImageGallery.module.css
@@ -19,7 +19,7 @@
   background-image: url("https://pnommensen.com/images/black-dots-png-19.png");
 }
 
-.error {
+.errorUnsplash {
   display: inline-block;
   text-align: center;
   margin: 30px;
@@ -31,38 +31,39 @@
   transition: 0.3s ease all;
 }
 
-.error:hover {
+.errorUnsplash:hover {
   background: rgb(235, 95, 79);
   box-shadow: 3px 3px 0 rgb(141, 38, 26);
 }
 
-.wrapper h1 {
+.wrapper .h1 {
   margin-top: 0;
   margin-bottom: 10px;
   color: #bbb;
 }
 
-.wrapper form {
+.wrapper .form {
   margin-bottom: 20px;
 }
 
-.wrapper form input[type="text"].input {
+.wrapper .form .input {
   min-width: 400px;
   border-radius: 50px;
   padding: 15px 20px;
   border: 1px solid #fff;
+  background-color: rgb(192, 192, 192);
   outline: none;
   margin-right: 12px;
   font-size: 18px;
   transition: 0.3s ease border-color;
 }
 
-.wrapper form input[type="text"].input:active,
-.wrapper form input[type="text"].input:focus {
+.wrapper .input:active,
+.wrapper .input:focus {
   border-color: #999;
 }
 
-.wrapper form button {
+.wrapper .form .button {
   padding: 15px 20px;
   border-radius: 50px;
   border: none;
@@ -73,12 +74,12 @@
   transition: 0.3s ease all;
 }
 
-.wrapper form button:hover {
+.wrapper .form .button:hover {
   background: #111;
   color: #eee;
 }
 
-.image_grid {
+.wrapper .image_grid {
   display: grid;
   grid-gap: 15px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -92,7 +93,7 @@
 }
 */
 
-.image {
+.wrapper .image {
   background: #d7d7d7;
   padding: 3px;
   border-radius: 3px;
@@ -101,18 +102,18 @@
   transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55) transform;
 }
 
-.image:hover {
+.wrapper .image:hover {
   transform: translateY(-2px);
 }
 
-.image img {
+.wrapper .image img {
   display: flex;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.image:nth-child(5n) {
+.wrapper .image:nth-child(5n) {
   grid-column-end: span 2;
 }
 
@@ -134,36 +135,36 @@
     max-width: 800px;
   }
 
-  .image_grid {
+  .wrapper .image_grid {
     grid-gap: 5px;
   }
 
-  form {
+  .wrapper .form {
     margin-bottom: 10px;
   }
 
-  input[type="text"].input {
+  .wrapper .form .input {
     padding: 5px 10px;
   }
 
-  .button {
+  .wrapper .form .button {
     padding: 10px 15px;
   }
 
-  .h1 {
+  .wrapper .h1 {
     margin-top: 0;
     margin-bottom: 5px;
   }
 
-  .image:nth-child(1n) {
+  .wrapper .image:nth-child(1n) {
     grid-column-end: span 1;
   }
 
-  .image:nth-child(2n) {
+  .wrapper .image:nth-child(2n) {
     grid-column-end: span 1;
   }
 
-  .image:nth-child(3n) {
+  .wrapper .image:nth-child(3n) {
     grid-column-end: span 1;
   }
 }
@@ -182,7 +183,7 @@
     padding: 1px;
   }
 
-  .image_grid {
+  .wrapper .image_grid {
     grid-gap: 2px;
   }
 }
@@ -195,35 +196,34 @@
     margin: 0;
   }
 
-  .image_grid {
+  .wrapper .image_grid {
     grid-gap: 1px;
     grid-auto-rows: minmax(50px, 150px);
   }
 
-  .image {
+  .wrapper .image {
     height: 15vmax;
     width: 25vmax;
   }
 
-  .image img {
+  .wrapper .image img {
   }
 
-  input[type="text"].input {
+  .wrapper .form .input {
     margin: 0;
     margin-bottom: 10px;
-    min-width: 200px !important;
-    width: 200px;
-    padding: 5px !important;
-    font-size: 1.5vmax !important;
+    min-width: 200px;
+    padding: 5px;
+    font-size: 1.5vmax;
     text-align: center;
   }
 
-  .h1 {
+  .wrapper .h1 {
     font-size: 2vmax;
   }
 
-  .button {
-    padding: 7px 5px !important;
-    font-size: 1.5vmax !important;
+  .wrapper .form .button {
+    padding: 7px 5px;
+    font-size: 1.5vmax;
   }
 }
